# global-chemical-inventory-database

./: .gitattributes  .gitignore  AGENTS.md  Makefile  Notes.md  Readme.md  build-custom-image-with-db.sh  docker-compose.yml  how_to_contribute.md  low_code.md  metadata.json  metadata.yml  pyproject.toml  zeropm-v0-0-3.sqlite  zeropm-v0-0-4.sqlite  
_ Database Files _/: a3_countries.csv  a4_country_source_index.csv  b1_inventories.csv  b2_inventory_summary.csv
csv_files/: a1_global_regions.csv  a2_region_country_index.csv  a5_source.csv  api_services.csv  apis.csv  b2_inventory_summary.csv  c2_api_ready_query.csv  c3_api_results.csv  c4_consensus_index.csv  c5_consensus_score.csv  cleanventory_chemicals.csv  component_index.csv  components.csv  consensus_index.csv  countries.csv  country_source_index.csv  country_sources_index.csv  d1_cleanventory_chemicals.csv  d2_zeropm_chemicals.csv  global_regions.csv  inventories.csv  inventory_summary.csv  multi_components.csv  openbabel.csv  region_country_index.csv  sources.csv  zeropm_chemicals.csv
custom-image/: Dockerfile
src/: load_csv.py  recreate_tables.sql
src/examples/: example-api-pagination.py  example-api.py  example.sql
src/pre-processing/: file_list  rename.sh
templates/: query.html  table.html
