[tool.poetry]
name = "zero-pm"
version = "0.1.0"
description = "Scripts to load tables from csvs"
authors = ["Jiyang Ye <jiyang.ye@ngi.no>"]
readme = "README.md"
packages = [{include = "zero_pm"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
